fix social buttons on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,11 @@
 .social-btns .fa-youtube {
   background-color: #AE312C;
 }
+@media (max-width: 992px) {
+  .social-btns #subscribe {
+    display: none;
+  }
+}
 
 .menu-btns .col-lg.m-2 {
   text-align: center;
@@ -167,13 +172,19 @@
   margin-bottom: 2rem;
 }
 #board-design .board-wrapper {
+  width: 100%;
   position: relative;
   left: 9%;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
   padding-bottom: 14rem;
 }
 #board-design .board-wrapper .board {
   transform: rotate(90deg);
+}
+@media (max-width: 992px) {
+  #board-design .board-wrapper .board {
+    transform: none;
+  }
 }
 
 #contact-us {
