--- a/scss/board-design.scss
+++ b/scss/board-design.scss
@@ -1,23 +1,32 @@
- #board-design {
-
+#board-design {
+    
      background-color: #fff;
      width: 100%; 
      box-shadow: 0px 5px 0px rgb(250 250 250 / 50%);
      margin-bottom: 2rem;
      
      .board-wrapper {
+         width: 100%;
          position: relative;
          left: 9%;
-         margin-bottom: 5rem;
-        padding-bottom: 14rem;
-        
-        .board {
+         margin-bottom: 2rem;
+         padding-bottom: 14rem;
+         
+         .board {
             transform: rotate(90deg);
         }
 
         // img {
-        //     width: 100%;
-        //     height: 100%;
-        // }
+            //     width: 100%;
+            //     height: 100%;
+            // }
+            
+             @media (max-width: 992px) {
+                 
+                
+                .board {
+                     transform: none;
+                 }
+             }
     }
  }
